# FranceTV

./: .gitignore  CMakeLists.txt  FranceTV.desktop  FranceTV.rc  FranceTV_fr_FR.ts  README.md  framelesswindow.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt5app.rc  qt6.conf
Linux/: AppImageBuilder.yml
darkstyle/: darkstyle.qss
framelesswindow/: framelesswindow.cpp  framelesswindow.h  framelesswindow.ui  windowdragger.cpp
